# Masterarbeit_Codes

./: .gitignore  01_How2BaselineStudies.txt  02_How2Eval_OwnData.txt  03_How2Processing_Pipeline.txt  ICP_KITTI.py  README.md  SupportFunctions.py  ToDOs.txt  XX_ToDOs.txt
01_Baseline_Studies/: 00_Moriyama_Benchmark_withStepsCombined.py  01_Moriyama_Benchmark_withStepsCombined_GlobalReg.py  02_Moriyama_Benchmark_Visualize.py  03_Moriyama_Benchmark_Visualize_Modified.py  04_Moriyama_Benchmark_Visualize_RegResult.py  05_Moriyama_Benchmark_Visualize1D.py  06_3DPlots_Moriyama_Benchmark.py  07_4DPlots_Moriyama_Benchmark.py  08_Moriyama_Benchmark_Correlation.py  3DPlots_Moriyama_Benchmark.py  4DPlots_Moriyama_Benchmark.py  DepthCamera_2023-07-31-11-41-30.json  ICP_KITTI.py  Mapping_TRC.py  Moriyama_Benchmark.py  Moriyama_Benchmark_Correlation.py  Moriyama_Benchmark_Visualize.py  Moriyama_Benchmark_Visualize1D.py  Moriyama_Benchmark_Visualize_Modified.py  Moriyama_Benchmark_Visualize_RegResult.py  Moriyama_Benchmark_withSteps.py  Moriyama_Benchmark_withStepsCombined.py  Moriyama_Benchmark_withStepsCombined_GlobalReg.py  Test.json
01_Baseline_Studies/Archive/CPPscripts/: CMakeLists.txt  NDT_Registration_Eval.cpp
02_Evaluations/: 00_Mapping_OwnData.py  01_OwnData_Preprocess.py  02_OwnData_EvalPerformance.py  03_OwnData_Visualize_Modified.py  04_OwnData_CompareDatasets.py  (+5 more)
02_Evaluations/CPPScripts_New/Src/: CMakeLists.txt  NDT_Registration_Eval_ownData.cpp  NDT_Registration_Eval_ownData_NEW.cpp
03_Processing_Pipeline/CPPScripts_New/Src/: CMakeLists.txt  PC_Processing_PCL.cpp
(+25 files in other folders)
