cmake_minimum_required(VERSION 2.6 FATAL_ERROR)
project(OWN_PROCESSING_Project)
find_package(PCL 1.13.1 REQUIRED)
include_directories(${PCL_INCLUDE_DIRS})
link_directories(${PCL_LIBRARY_DIRS})
add_definitions(${PCL_DEFINITIONS})
add_executable(pc_pcl_processing PC_Processing_PCL.cpp)
target_link_libraries(pc_pcl_processing ${PCL_LIBRARIES})